fix: landing page spacings

--- a/css/s.css
+++ b/css/s.css
@@ -833,7 +833,7 @@ canvas {
 
 @media (max-width: 500px) {
 	.version-logo {
-		margin-top: 7rem;
+		margin-top: 11rem;
 		height: 14vh;
 		width: auto;
 	}
